src/objects/loan__Default_Commission_Hierarchy__c.object
<CustomObject>
    <description>Setup object to store the default commission plans for different broker levels</description>
    <fields>
        <fullName>loan__Broker_Level_Contract_Type_Key__c</fullName>
        <description>Field used to store the unique key created by combining Broker Level, Contract Type and Product</description>
        <inlineHelpText>Unique key created by combining Broker Level and Contract Type</inlineHelpText>
        <label>Broker Level-Contract Type-Product Key</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>loan__Broker_Level__c</fullName>
        <description>Primary Broker for a contract has Broker Level as 1. Its Parent Broker has Broker Level as 2 and so on.</description>
        <inlineHelpText>Broker position in the broker hierarchy. Primary Broker has broker level &apos;1&apos;, its parent broker has level &apos;2&apos; and so on.</inlineHelpText>
        <label>Broker Level</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Contract_Type__c</fullName>
        <description>Contract Type</description>
        <inlineHelpText>Contract Type</inlineHelpText>
        <label>Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refinance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Default_Commission_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Default Commission Plan for this Broker Level.</description>
        <inlineHelpText>Default Commission Plan for this Broker Level.</inlineHelpText>
        <label>Default Commission Plan</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>loan__Commission_Plan__c.loan__Enabled__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>loan__Commission_Plan__c</referenceTo>
        <relationshipLabel>Default Commission Hierarchy</relationshipLabel>
        <relationshipName>Default_Commission_Hierarchy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Lending_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lending Product</label>
        <referenceTo>loan__Loan_Product__c</referenceTo>
        <relationshipLabel>Broker Commission Hierarchy</relationshipLabel>
        <relationshipName>Default_Commission_Hierarchy</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Default Commission Hierarchy</label>
    <nameField>
        <displayFormat>CHRI-{0000}</displayFormat>
        <label>Commission Hierarchy Record Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Default Commission Hierarchy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>loan__Commission_Plan_Not_Null_Check</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(loan__Default_Commission_Plan__c)</errorConditionFormula>
        <errorDisplayField>loan__Default_Commission_Plan__c</errorDisplayField>
        <errorMessage>Default Commission Plan cannot be blank.</errorMessage>
    </validationRules>
</CustomObject>